fixed another ie has-layout bug damnit

--- a/public/stylesheets/layout1_text.css
+++ b/public/stylesheets/layout1_text.css
@@ -110,12 +110,14 @@ p.caption {clear:both; margin:0.5em 0 2.0em 20px; text-align:left; color:rgb(80,
 	overflow: hidden;
 }
 .tile-square-datebox a {font-size: 11px;}
-.tile-textbox {height:50px; float:left; width:180px;}
+.tile-textbox-for-standings {height:50px; float:left; width:180px;}
+.tile-textbox {height:50px; float:left; width: 370px;}
 .tile-picbox {height:50px; width:64px; overflow: hidden; float:left;}
 .tile-picbox img {height:50px; margin:0; padding:0; border: 0; max-width: 64px; min-width: 64px; overflow: hidden;}
 .tile-top-line {height: 30px; line-height: 30px; font-weight: bold; font-size: 20px; text-align: left; margin-left: 10px;}
 .tile-top-line a {font-size: 14px;}
-.tile-bottom-line {height: 20px; line-height: 20px; font-size: 12px; margin-left: 10px;}
+.tile-bottom-line {height: 20px; line-height: 20px; font-size: 12px;}
+.tile-bottom {padding-left:10px;}
 .tile-bottom-left { margin-left: 10px; margin-right:10px;; float: left; width: 160px; text-align: left;}
 .tile-bottom-right { margin-left: 10px; margin-right:10px; float: left; width:160px; text-align: right;}
 .standings-tile {border: 1px solid black;  background-color: #eaeaea; margin: 5px;}
